fix: add overflow

--- a/style.css
+++ b/style.css
@@ -350,6 +350,7 @@ body {
     padding-top: 17px;
     padding-bottom: 30px;
     text-align: justify;
+    overflow: hidden;
 }
 
 .employee-list {
